--- a/contact.html
+++ b/contact.html
@@ -25,17 +25,11 @@
         <div class="container">
             <h2>Contact Us</h2>
             <form action="thankyou.html" method="post">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required>
+    <!-- form fields go here -->
+    <input type="submit" value="Submit">
+</form>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required></textarea>
-
-                <input type="submit" value="Submit" class="submit-button">
-            </form>
+           
         </div>
     </section>
 
