--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,8 @@
     <section class="contact-form">
         <div class="container">
             <h2>Contact Us</h2>
-             <form action="thankyou.html" method="post">
+
+  <form https://formspree.io/your-Bhanudassarode7659@gmail.com" method="post">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
 
