--- a/services.html
+++ b/services.html
@@ -15,6 +15,12 @@
   gtag('config', 'AW-11391419326');
 </script>
 
+    <!-- Event snippet for p conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-11391419326/lJYJCM2rl_wYEL6H7bcq'});
+</script>
+
+
 </head>
 <body>
 
